--- a/index.html
+++ b/index.html
@@ -45,25 +45,108 @@
                 <a href="#"><img alt="" src="img/eternity-icon.png" width="100px" height="120px"></a>
             </div>
             <div class="col-xs-12 col-sm-6 social-top">
-                <!--<ul class="social-icons">
-                    <li><a href="#"><img src="img/s1.png" alt=""></a></li>
-                    <li><a href="#"><img src="img/s2.png" alt=""></a></li>
-                    <li><a href="#"><img src="img/s3.png" alt=""></a></li>
-                </ul>-->
+                <!--    <ul class="social-icons">
+                        <li><a href="#"><img src="img/s1.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/s2.png" alt=""></a></li>
+                        <li><a href="#"><img src="img/s3.png" alt=""></a></li>
+                    </ul>-->
             </div>
             <!-- /End Header Top -->
             <!-- Header -->
             <div class="col-xs-12 crossfit">
-                <h1><strong>Eternity Crossfit</strong> - Wod del dia.</h1>
-<!--
-                <p>Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu.</p>
--->
+                <h1><strong>Eternity Crossfit</strong></h1>
+                <!--
+                                <p>Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu.</p>
+                -->
                 <!--<div class="header-btn-holder">
                     <button>START MY DEMO</button>
                     <button class="signup-button pop-up">WATCH VIDEO</button>
                 </div>-->
-                <div class="container">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias assumenda beatae blanditiis earum incidunt minus nemo, odit officia officiis possimus provident quam quia recusandae repudiandae suscipit tempore, totam voluptates voluptatum?</p>
+                <div class="row">
+                    <div class="wod">
+                        <div class="table-responsive">
+                            <table class="table">
+                                <tr>
+                                    <th colspan="2">
+                                        <div class="pull-left"> <h4 class="title"><strong>Miercoles.</strong></h4></div>
+
+                                        <div class="pull-right title-date">
+                                            <h4 class="title">02/02</h4>
+                                        </div>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    <th class="text-center title-categories" width="50%"><h4 class="title">Fuerza</h4></th>
+                                    <th class="text-center title-categories"  width="50%"><h4 class="title">Acondicionamiento</h4></th>
+                                </tr>
+                                <tr>
+                                    <td class="text-center"><ol style="list-style: none;">
+                                        <li>OHS 4x6 @70%</li>
+                                    </ol></td>
+                                    <td class="text-center"><ol style="list-style: none;">
+                                        <li>15x5 UNBROKEN C2B</li>
+                                        <li>DESCANSA LO QUE NECESITES ENTRE SET, PERO DEBEN SER UNBROKEN</li>
+                                    </ol></td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center title-categories" colspan="2"><h4 class="title">Acondicionamiento de Gimnasia</h4></td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center" colspan="2"><ol style="list-style: none;">
+                                        <li>80 Superman</li>
+                                    </ol></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <!--                    <div class="col-md-12 col-xs-12 title-categories">
+                                            <div class="col-md-6 col-xs-6">
+                                                <div class="">
+                                                    <h3 class="title">Fuerza</h3>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6 col-xs-6">
+                                                <div class="">
+                                                    <h3 class="title">Acondicionamiento de Gimnasia</h3>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="categories">
+                                                <div>
+                                                    <ol style="list-style: none;">
+                                                        <li>OHS 4x6 @70%</li>
+                                                    </ol>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="categories">
+
+                                                <div>
+                                                    <ol style="list-style: none;">
+                                                        <li>15x5 UNBROKEN C2B</li>
+                                                        <li>DESCANSA LO QUE NECESITES ENTRE SET, PERO DEBEN SER UNBROKEN</li>
+                                                    </ol>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-12">
+                                            <div class="pull-center categories">
+                                                <div class="title-categories">
+                                                    <h3 class="title">Acondicionamiento Zona Media</h3>
+                                                </div>
+                                                <div>
+                                                    <ol style="list-style: none;">
+                                                        <li>80 Superman</li>
+                                                    </ol>
+                                                </div>
+                                            </div>
+                                        </div>-->
+
+
+                    </div>
+
+
                 </div>
             </div>
             <!-- /End Header -->
