--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <button class="signup-button pop-up">WATCH VIDEO</button>
                 </div>-->
                 <div class="row">
-                    <div class="wod">
+                    <div class="wod text-center">
                         <div class="table-responsive">
-                            <table class="table">
+                            <table class="table text-center">
                                 <tr>
                                     <th colspan="2">
                                         <div class="pull-left"> <h4 class="title"><strong>Miercoles.</strong></h4></div>
